# bench-curl-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  out.html
bench-curl-cli/: Cargo.toml
bench-curl-cli/src/: main.rs  parser.rs
burl/: Cargo.toml  template.html
burl-cli/: Cargo.toml
burl-cli/src/: main.rs  parser.rs
burl-reporter/: Cargo.toml
burl-reporter/src/: html_report.rs  lib.rs  plots.rs  report.rs  stats_helpers.rs
burl-reporter/src/templates/: report_template.html
burl/src/: config.rs  errors.rs  lib.rs  parser.rs  plots.rs  report.rs  request_factory.rs  sampler.rs  stats.rs
burl/src/reporting/: mod.rs  plots.rs  report.rs  stats.rs  stats_collection.rs  template.html
burl/src/reporting/templates/: baseline_summary_template.html  report_template.html  summary_template.html
burl/src/sampling/: mod.rs  request_factory.rs  sampler.rs
burl/src/stats/: mod.rs  stats.rs  stats_collection.rs
core/: Cargo.toml
core/src/: config.rs  lib.rs  parameter.rs  plots.rs  request_factory.rs  stats.rs
examples/: specs.toml  test_from_docker.sh  test_from_toml.sh  test_from_toml_actix.sh  test_from_toml_fastapi.sh  test_get.sh
examples/actix/: json_payload.json  report.html  specs.toml
examples/actix/data/: results.json
examples/actix/plots/: durations_distribution.html  durations_histogram.html  durations_timeseries.html
examples/actix/report/: report.html
examples/actix/report/components/: durations_distribution.html  durations_histogram.html  durations_timeseries.html  summary.html
examples/actix/report/data/: meta.json  samples.json  stats.json
examples/docker/: specs.toml
examples/fastapi/: specs.toml
examples/fastapi/report/: report.html
examples/fastapi/report/components/: durations_distribution.html  durations_histogram.html  durations_timeseries.html
examples/fastapi/report/data/: meta.json  samples.json  stats.json
examples/fastapi/report/plots/: durations_distribution.html  durations_histogram.html  durations_timeseries.html
tests/: specs.toml  test.bash  test_from_specs.sh
tests/actix/: histogram.html
