[package]
name = "burl-cli"
version = "0.1.0"
edition = "2021"
authors = ["sweil"]
readme = "../README.md"
repository = "https://github.com/s-weil/burl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burl = { path = "../burl" }
toml = "0.5.9"
thiserror = "1.0"

tokio = { version = "1.23.0", features = ["full"] }

# logging
env_logger = "0.10.0"
log = { version = "0.4.17", feature = ["env_logger"] }

# cli
clap = { version = "4.0.29", features = ["derive"] }
