[package]
name = "burl-reporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotly = "0.7.0"
log = "0.4.17"
chrono = "0.4.23"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.91"

burl = { path = "../burl" }
