[package]
name = "burl"
version = "0.1.0"
edition = "2021"
author = "sweil"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
reqwest = { version = "0.11.13", features = ["json", "rustls-tls"] }
serde = { version = "1.0.149", features = ["derive"] }
log = "0.4.17"
plotly = "0.7.0"
