[package]
name = "burl"
version = "0.1.0"
edition = "2021"
authors = ["sweil"]
readme = "../README.md"
repository = "https://github.com/s-weil/burl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
tokio = { version = "1.23.0", features = ["full"] }
reqwest = { version = "0.11.13", features = ["json", "rustls-tls"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.91"
log = "0.4.17"
plotly = "0.7.0"
statrs = "0.16.0"
thiserror = "1.0.38"
rand = "0.8.5"
