[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = [
    "blocking",
    "json",
] } # TODO: add tokio and async support
serde = { version = "1.0.149", features = ["derive"] }
log = "0.4.17"
# plotting
plotly = "0.7.0"
# plotly = "0.8.3"
